# cpp_experience

./: .gitignore  .gitmodules  .ycm_extra_conf.py  array_bool.cpp  baudrate.cpp  boost-graph-astar.cpp  boost_bimap.cpp  boost_bind.cpp  boost_coroutine.cpp  boost_format.cpp  boost_future.cpp  boost_graph.cpp  boost_join_ranges.cpp  boost_lexical_cast.cpp  boost_loop_on_assign_list.cpp  boost_move.cpp  boost_mpl.cpp  boost_multi_index.cpp  boost_optional.cpp  boost_phoenix.cpp  boost_range.cpp  boost_result_of.cpp  boost_shared_from_unique.cpp  boost_signals.cpp  boost_sort_transformed.cpp  boost_spirit.cpp  boost_streams.cpp  boost_tokenizer.cpp  boost_visitor.cpp  boot_variant.cpp  break.cpp  const_shared_ptr.cpp  constructors.cpp  dvorak.cpp  enumType.cpp  epsilon.cpp  field_equals.cpp  functional.cpp  geo-types.cpp  glm_perpendicular.cpp  (+20 more)
2018/: boost-store-adaptors.cpp  boost_geometry_within.cpp  boost_range_concept.cpp  exe-name.cpp  int-coords.cpp  move-semantic.cpp  parse-wkt.cpp  range-set-intersect.cpp  segment-iterator.cpp  sizeof-small-vector.cpp  typed-directions.cpp  variant-comparison.cpp  vector-map-adaptor.cpp  vector-map.hpp
2019/: analog-literals.cpp  analogliterals.hpp  array-init.cpp  boost_multi_array.cpp  console-colors.cpp  enable_if_struct.cpp  explicit_copy.cpp  gcclib-version.cpp  glm-transformations.cpp  initialization.cpp  member-functor.cpp  more-type-traits.cpp  multiset.cpp  non-conforming.cpp  num-bits.cpp  sizeof-long.cpp  small-object-allocator.cpp  string-examination.cpp  string-format.cpp  string-literals.cpp  substr.cpp  swig-print-args.cpp  type-of-adapter.cpp  virtual-functor.cpp  wostream-print-char.cpp
2019/cmake-sandbox/: CMakeLists.txt  app.cpp  version.txt
2019/cmake-sandbox/Lib.1/: CMakeLists.txt  add.cpp
2019/cmake-sandbox/Lib.2/: CMakeLists.txt
2019/cmake-sandbox/Lib.A/: CMakeLists.txt  add.cpp
2019/cmake-sandbox/Lib.A/include/Lib.A/: add.h
2019/cmake-sandbox/cmake/: conan-recipe.cmake  conanfile.py.in
2019/hackerrank/and-xor-or/tests/: CMakeLists.txt  testHelpers.cpp
2019/hackerrank/common/: CMakeLists.txt  connected-components.hpp
2019/hackerrank/heavy-light-white-falcon/: CMakeLists.txt  MaxHeap.cpp  MaxHeap.hpp  SegmentTreeMax.cpp  SegmentTreeMax.hpp  TSegmentTreeIB.hpp  falcon.cpp  hld.cpp  hld.hpp  speedTest.cpp
2019/hackerrank/heavy-light-white-falcon/data/: input00_01.txt  input01.txt  input03.txt
2019/hackerrank/heavy-light-white-falcon/tests/: CMakeLists.txt  testMaxHeap.cpp  testSegmentTree.cpp
2019/hackerrank/jennys-subtrees/: CMakeLists.txt  dummy.py  jennys-subtrees.cpp
2019/hackerrank/jennys-subtrees/data/: input18.txt
2019/hackerrank/matrix/: CMakeLists.txt  matrix.cpp  matrix_test.cpp
2019/hackerrank/matrix-rotate/: CMakeLists.txt  gen-coverage.sh  matrix-rotate.cpp
2019/hackerrank/matrix-rotate/src/: Ring.cpp
2019/hackerrank/matrix-rotate/tests/: CMakeLists.txt  testRing.cpp
2019/pyhton-integration/src/file.swig/: CMakeLists.txt  pyFile.i
2019/rrt-vehicle/: CMakeLists.txt  rrt-vehicle.cpp  vehicle.hpp
2019/static-in-shared-libs/: CMakeLists.txt  printer-api.hpp  printer-base.cpp  printer-base.hpp  printer.cpp  printer.hpp  printer2.cpp  printer2.hpp  static-in-shared.cpp
2020/: boost_filesystem_check_permission.cpp  boost_fusion_save_ini.cpp  file-module-name.cpp  replace_substring.cpp
2020/boost-websocket/: CMakeLists.txt
2020/boost-websocket/client-sync/: CMakeLists.txt
2020/boost-websocket/client-sync-ssl/: CMakeLists.txt  websocket_client_sync_ssl.cpp
2020/boost-websocket/server-sync/: CMakeLists.txt
2021/: constructors.cpp  fold_add.cpp  inplace-merge-sort.cpp  islands.cpp  max-from-center.cpp  pvc.cpp  tricky_questions.cpp  universal-ref.cpp  vector-reserve.cpp
2021/hash_string_search/: CMakeLists.txt  hash_string_search.cpp
BoostCoroutine/: CMakeLists.txt  boost_coroutine.cpp
boostActor/: CBoard.hpp  CMakeLists.txt  TActor.hpp  THandlerBase.hpp  TVariant.hpp  Wrap.hpp  actorMain.cpp  actorMain_.cpp
boostActor/actor/: CBoard.hpp  TActor.hpp  THandler.hpp
boostActor/actor/private/: THandlerBase.hpp  TVariant.hpp
boostActor/actor/utils/: ForEach.hpp
boostActor/fastActor/: TActor.hpp
boostActor/fastActor/private/: THandlerNode.hpp
boostActor/fastActor/utils/: ForEach.hpp
curlDownloader/: CMakeLists.txt  curlDownloaderMain.cpp
curlDownloader/curlCpp/: CurlRequest.cpp
hackerrank/array-simple-queries/: CMakeLists.txt  simple-array-queries.cpp
hackerrank/balanced-forest/: CMakeLists.txt
hackerrank/kittys-tree-calculations/: CMakeLists.txt  SegmentTreeSolver.cpp  SegmentTreeSolver.hpp
hackerrank/self-balancing-tree/: CMakeLists.txt  TAvlSet.hpp  testAvl.cpp  test_AvlSet.cpp
pre-2018/: allocator.cpp  (+41 more)
pre-2018/GpsReader/: CMakeLists.txt
pre-2018/GpsReader/app/: Device.cpp  SentenceExtractor.hpp
pre-2018/GpsReader/data/: nmea_example_02.txt
pre-2018/action/: ActionMain.cpp  CMakeLists.txt
pre-2018/boostPractice/: CMakeLists.txt
pre-2018/boostPractice/src/: FutureExpectant.hpp
pre-2018/curlDownloader/curlCpp/: CMakeLists.txt  CurlRequest.cpp  CurlRequest.h  IDownloadProgressListener.hpp
pre-2018/restClient/: CMakeLists.txt  rest-client.cpp
pre-2018/sharedDaemon/: .vimrc  CMakeLists.txt
pre-2018/sharedDaemon/app/: CUniqueInstance.hpp  DynamicLoader.hpp  LoggerInstance.hpp  daemonLoader.cpp
pre-2018/sharedDaemon/calculator/: CMakeLists.txt  CalculatorFactory.hpp  LoggerHolder.hpp  calculator.cpp
pre-2018/sharedDaemon/calculatorCommon/: ICalculator.hpp  ILogger.hpp
pre-2018/sharedDaemon/calculatorTest/: CMakeLists.txt  TestCalculator.cpp  TestCalculator.hpp
sharedDaemon/: CMakeLists.txt
sharedDaemon/app/: CDynamicLoaderException.cpp  CDynamicLoaderException.hpp  CInstanceSynchronizer.cpp  CInstanceSynchronizer.hpp  CUniqueInstance.cpp  CUniqueInstance.hpp  DynamicLoader.hpp  LoggerInstance.cpp  daemonLoader.cpp
sharedDaemon/calculator/: CalculatorFactory.cpp  CalculatorFactory.hpp  LoggerHolder.cpp  LoggerHolder.hpp  calculator.cpp  calculator.hpp
sharedDaemon/lib/: ICalculator.hpp  calculator.cpp  calculator.hpp
(+288 files in other folders)
