cmake_minimum_required(VERSION 2.8)

include_directories( "${CMAKE_CURRENT_SOURCE_DIR}" )

message("Library output dir: ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")

set(LIBRARY_NAME calculator)

file(GLOB_RECURSE LIB_SRC *.cpp)

set(MYLIB_VERSION_MAJOR ${LIB_REAL_VERSION})
set(MYLIB_VERSION_MINOR 1)
set(MYLIB_VERSION_PATCH 1)
set(MYLIB_VERSION_STRING ${MYLIB_VERSION_MAJOR}.${MYLIB_VERSION_MINOR}.${MYLIB_VERSION_PATCH})

add_library(${LIBRARY_NAME} SHARED ${LIB_SRC})
set_target_properties(${LIBRARY_NAME} PROPERTIES VERSION ${MYLIB_VERSION_STRING} SOVERSION ${MYLIB_VERSION_MAJOR})
